--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/tacos.html">Tacos</a></li>
+        </ul>
         <script src="" async defer></script>
     </body>
 </html>
